crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_11.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UnusedImport
    body: "`pathlib.PurePath` imported but unused"
    suggestion: "Remove unused import: `pathlib.PurePath`"
    fixable: true
  location:
    row: 4
    column: 26
  end_location:
    row: 4
    column: 34
  fix:
    edits:
      - content: from pathlib import Path
        location:
          row: 4
          column: 0
        end_location:
          row: 4
          column: 34
  parent: ~

