crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_15.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
F401_15.py:5:25: F401 [*] `pathlib.Path` imported but unused
  |
5 | if TYPE_CHECKING:
6 |     from pathlib import Path
  |                         ^^^^ F401
  |
  = help: Remove unused import: `pathlib.Path`

ℹ Fix
2 2 | from django.db.models import ForeignKey
3 3 | 
4 4 | if TYPE_CHECKING:
5   |-    from pathlib import Path
  5 |+    pass
6 6 | 
7 7 | 
8 8 | class Foo:


