crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_17.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
F401_17.py:12:27: F401 [*] `threading.Thread` imported but unused
   |
12 | def fn(thread: Thread):
13 |     from threading import Thread
   |                           ^^^^^^ F401
14 | 
15 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
   |
   = help: Remove unused import: `threading.Thread`

ℹ Fix
9  9  | 
10 10 | 
11 11 | def fn(thread: Thread):
12    |-    from threading import Thread
13 12 | 
14 13 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
15 14 |     # top level.

F401_17.py:20:27: F401 [*] `threading.Thread` imported but unused
   |
20 | def fn(thread: Thread):
21 |     from threading import Thread
   |                           ^^^^^^ F401
22 | 
23 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
   |
   = help: Remove unused import: `threading.Thread`

ℹ Fix
17 17 | 
18 18 | 
19 19 | def fn(thread: Thread):
20    |-    from threading import Thread
21 20 | 
22 21 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
23 22 |     # top level.


