crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_5.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: UnusedImport
      body: "`a.b.c` imported but unused"
      suggestion: "Remove unused import: `a.b.c`"
      fixable: true
    location:
      row: 2
      column: 16
    end_location:
      row: 2
      column: 17
    fix:
      content: ""
      location:
        row: 2
        column: 0
      end_location:
        row: 3
        column: 0
    parent: ~
  - kind:
      name: UnusedImport
      body: "`d.e.f` imported but unused"
      suggestion: "Remove unused import: `d.e.f`"
      fixable: true
    location:
      row: 3
      column: 16
    end_location:
      row: 3
      column: 22
    fix:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 4
        column: 0
    parent: ~
  - kind:
      name: UnusedImport
      body: "`h.i` imported but unused"
      suggestion: "Remove unused import: `h.i`"
      fixable: true
    location:
      row: 4
      column: 7
    end_location:
      row: 4
      column: 10
    fix:
      content: ""
      location:
        row: 4
        column: 0
      end_location:
        row: 5
        column: 0
    parent: ~
  - kind:
      name: UnusedImport
      body: "`j.k` imported but unused"
      suggestion: "Remove unused import: `j.k`"
      fixable: true
    location:
      row: 5
      column: 7
    end_location:
      row: 5
      column: 15
    fix:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0
    parent: ~

