crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_7.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UnusedImport
    body: "`typing.Union` imported but unused"
    commit: "Remove unused import: `typing.Union`"
    fixable: true
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 9
  fix:
    content: "from typing import (\n    Mapping,  # noqa: F401\n    )"
    location:
      row: 28
      column: 0
    end_location:
      row: 31
      column: 1
  parent:
    row: 28
    column: 0
- kind:
    name: UnusedImport
    body: "`typing.Awaitable` imported but unused"
    commit: Remove unused import
    fixable: true
  location:
    row: 66
    column: 19
  end_location:
    row: 66
    column: 28
  fix:
    content: ""
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
  parent: ~
- kind:
    name: UnusedImport
    body: "`typing.AwaitableGenerator` imported but unused"
    commit: Remove unused import
    fixable: true
  location:
    row: 66
    column: 30
  end_location:
    row: 66
    column: 48
  fix:
    content: ""
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
  parent: ~

