crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_9.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UnusedImport
    body: "`foo.baz` imported but unused"
    commit: "Remove unused import: `foo.baz`"
    fixable: true
  location:
    row: 4
    column: 21
  end_location:
    row: 4
    column: 24
  fix:
    content: from foo import bar
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 24
  parent: ~

