crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F402_F402.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: ImportShadowedByLoopVar
    body: "Import `os` from line 1 shadowed by loop variable"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 6
  fix: ~
  parent: ~
- kind:
    name: ImportShadowedByLoopVar
    body: "Import `path` from line 2 shadowed by loop variable"
    commit: ~
    fixable: false
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 8
  fix: ~
  parent: ~

