crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F403_F403.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: ImportStar
    body: "`from F634 import *` used; unable to detect undefined names"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 18
  fix: ~
  parent: ~
- kind:
    name: ImportStar
    body: "`from F634 import *` used; unable to detect undefined names"
    commit: ~
    fixable: false
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 18
  fix: ~
  parent: ~

